--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,245 @@ body {
     color: rgb(255, 255, 255);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.img-cont{
-    width: 70vw;
-    background-color: #252f3d;
+.header1{
+    height: 50px;
+    background-color: #0143a7;
+    border-bottom: 1px solid #0143a7;
+    opacity: 0.95;
+}
+.header2{
+    background-color: #dfdfe0;
+    height: 59px;
+    opacity: 0.95;
+    border-bottom: 1px solid #0143a7;
+}
+.header2-select{
+    height: 55px;
+}
+.header1-cont,.header1-mid{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: clamp(16px,2vw,18px);
+}
+.header1-cont{
+    width: 90%;
+    height: 50px;
     margin: auto;
-    padding: 30px ;
+}
+.header1-mid{
+    width: 60%;
+    display: flex;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 30px;
+    justify-content: center;
+}
+.header5{
+    width: 100%;
+}
+.header1-mid input{
+    height: 30px;
+    width: 100%;
+    border: 0;
+}
+.search-btn{
+    padding: 1px;
+    border: 0;
+    width:40px;
+    height: 100%;
+}
+.header1-cont2{
+    width: 87%;
+    height: 59px;
+    direction: rtl;
+    overflow-x: auto;
+}
+.header1-cont2 a,.my-adver{
+    color: #313131;
+    text-decoration: none;
+    flex-shrink: 0;
+    margin-left: 25px;
+}
+.header1-cont2 a:hover{
+    border-radius: 5px;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #ffffff6b;
+    /* border: 1px solid rgb(49, 49, 49); */
+}
+.header5{
+    width: 75%;
+}
+.header5-select{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    direction: rtl;
+}
+.head-icon{
+    font-size: clamp(16px,2vw,21px);
+}
+.select1 select {
+    background-color: #dfdfe0;
+    color: #313131;
+    font-size: clamp(15px,2vw,20px);
+    border-radius: 5px;
+    padding: 3px 0;
+    margin-left: 6px;
+}
+.my-adver{
+    padding: 4px;
+    border: 1px solid #313131;
+    margin-left: 0;
+    font-size: clamp(15px,2vw,20px);
+    border-radius: 5px;
+}
+.section-adver{
+    height: 700px;
+    width: 100%;
+    background: -webkit-linear-gradient( top  , rgb(2, 49, 179)  ,   #d8dbdb  60%   );
+}
+.section1-adver{
+    padding: 70px 0;
+    width: 95%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+.section1-cont{
+    text-align: center;
+}
+.icon-left{
+    font-size: 40px;
+}
+.icon-left:hover{
+    cursor: pointer;
+}
+.card{
+    width: 80%;
+    padding: 10px;
+    background-color: #e3e4e31f;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    border:1px solid #ffffff;
+    border-radius: 5px;
+}
+.card-left{
+    width: 20%;
+    background-color: aquamarine;
+}
+.card-right{
+    direction: rtl;
+    width: 80%;
+    color: #181f29;
+    font-size: clamp(13px,2vw,20px);
+}
+.img-card1{
+    width: 100%;
+    height: 100%;
+}
+.card-title{
+    display: inline-block;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.prise{
+    width: 100%;
+    text-align: center;
+}
+.prise1{
+    display: inline-block;
+    padding: 2px;
+    background-color: #febd69;
+    border-radius: 5px;
+}
+.title-card1{
+    display: inline;
+    font-weight: 800;
+}
+.card-title{
+    width: 100%;
+}
+.discount{
+    text-decoration: line-through;
+}
+.card-name2,.number,.card-link{
+    font-size: clamp(12px,2vw,20px);
+}
+.card-name,.card-contact{
+    margin: 5px;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.card-name1{
+    font-size: clamp(12px,2vw,20px);
+
+}
+.card-name2{
+    display: inline-block;
+    width: 80%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.card-name1{
+    width: 80%;
+    align-items: center;
+    display: flex;
+}
+.card-name{
+    display: flex;
+    align-items: center;
+}
+.card-time,.card-cont,.card-cont{
+    font-size: clamp(10.5px,2vw,20px);
+}
+.po{
+    top: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 100;
+}
+.header4{
+    margin-top:112px;
+}
+.footer1{
+    height: 350px;
+}
+.headerdow{
+    display: none;
+   position: fixed;
+   bottom: 0%;
+   left: 0%;
+   right: 0;
+   z-index: 100;
+}
+.card-cont2:hover{
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.548);
+}
+/* محتوى الاعلات */
+.img-cont{
+    width: 95%;
+    background-color: #f7f7f7;
+    margin: auto;
     margin-top: 10px;
     border-radius: 30px;
     direction: rtl;
+    color: #131921;
+}
+.cont-items{
+    padding: 20px 50px;
 }
 .back-icon{
     align-items: center;
@@ -39,6 +270,15 @@ body {
     border-bottom:1px solid rgb(153, 153, 153);
 }
 /*  */
+/* .text1{
+    display: inline;
+} */
+.tet1{
+    font-size: clamp(13px,2vw,18px);
+    position: absolute;
+    right: 20%;
+    color: rgb(0, 255, 200);
+}
 .add-adver-img{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
@@ -80,125 +320,180 @@ body {
     margin: auto;
 }
 .add-picture{
-    margin: 5px;
+    margin: 1px;
     width: 100px;
     font-size: clamp(14px,2vw,20px);
-
+    background-color: #252f3d;
 }
 .next-btn{
     padding: 3px;
     font-size: clamp(13px,2vw,20px);
     margin-right: 200px;
+    background-color: #252f3d;
 }
-.text{
-    position: absolute;
-    top: 48%;
-    right: 20%;
-    font-size: clamp(13px,2vw,18px);
-    color: blue;
+/* تعديل */
+.modfile-img{
+    text-align: center;
 }
-/* select */
-.select-adver{
-    background-color: #ebebeb;
-    width: 50%;
+.next-btn1{
     border-radius: 5px;
-    font-size: 20px;
-    margin: 5px;
+    color: #d8dbdb;
+    border: 1px solid #d8dbdb;
+    padding: 3px;
+    /* margin: 2px; */
+    cursor: pointer;
+    background-color: #252f3d;
 }
-.adver-title{
-    font-size: clamp(13px,2vw,23px);
+/* محتوى */
+.like{
+    display: flex;
+}
+.cont-title{
+    padding-top: 20px;
+}
+h4{
+    font-size: clamp(12px,2vw,23px);
+}
 
+article{
+    white-space: pre-wrap;
+    font-size: clamp(12px,2vw,20px);
+    width: 80%;
 }
-.title-con{
+.commont-items,.card-name{
+    font-size: clamp(12px,2vw,20px);
+}
+.cont-img1{
+    width: 95%;
+}
+.cont-img{
+    margin-top: 50px;
+}
+.contect-1{
+    font-size: clamp(14px,2vw,23px);
+    border: 1px solid #d8dbdb;
+    background-color: #252f3d;
+    padding: 3px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-right:50px;
+    color: #d8dbdb;
+}
+.commont{
+    margin: 10px;
+    border-radius: 10px;
+    width: 80%;
+    background-color: #d8dbdb;
+    border-bottom: 2px #252f3d;
+    color: #000000;
+}
+.commont-head{
+    padding: 10px;
+    margin: auto;
     width: 80%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
+.spand-line1{
+    width: 98%;
+    border-bottom:3px solid rgb(153, 153, 153);
+}
+.commont-contener1{
+    padding: 5px;
 
-
-.title-textarea{
-    width: 65%;
 }
-.datales-textarea{
-    width: 70%;
-}
-.select-adver1{
-    width: 25%;
-}
-.curanty{
-    font-size: clamp(13px,2vw,16px);
+.respon{
+    padding: 30px 30px 20px 0px;
+}    
+.respon button{
+    padding: 2px;
+    font-size: clamp(14px,2vw,20px);
 }
 /*  */
-.add-adver1-a{
-    color: rgb(255, 255, 255);
-    font-size: clamp(16px,2vw,30px);
-    text-decoration: none;
-}
-
-.back:active,.icon-back:active{
-    color: rgb(202, 202, 202);
-    border: 1px solid white;
-}
-.part-add-adver{
-    text-align: center;
-    font-size: clamp(18px,2vw,35px);
-
-}
-.add-adver1{
-    margin: 40px 0;
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.add-adver1:hover{
-    border: 1px solid white;
-    cursor: pointer;
-    border-radius: 10px;
-}
-.back:active,.icon-back:active{
-    color: rgb(202, 202, 202);
-}
-.add-adver1:active .add-adver1-a,.icon-addver,.add-adver1:active{
-    color: rgb(202, 202, 202);
-}
-.advice{
-    width: 38px;
+.head{
+    padding-bottom: 60px;
 }
 @media  (max-width: 600px){
-    .back-icon{
-        width: 60px;
+    .header2{
+        height: 48px;
+        background-color: #dfdfe0;
     }
-    .add-adver-img{
-        grid-template-columns: 1fr 1fr ;
-        column-gap: 10px;
-        row-gap: 10px;
+    .header5{
+        width: 93%;
     }
-    .adver-img-1{
-        height:100px;
+    .header1-mid{
+        width: 50%;
+        display: flex;
+        border-radius: 5px;
+        overflow: hidden;
+        height: 22px;
+        justify-content: center;
     }
-    .add-picture{
-        width: 60px;
-        font-size: clamp(14px,2vw,20px);
-    
+    .search-btn{
+        width: 26px;
     }
-    .text{
+    .search-img{
+        width: 25px;
+    }
+    .section2{
         position: absolute;
-        top: 25%;
-        right: 20%;
+        top: 50%;
+        left: 1%;
     }
-    .next-btn{
-        margin-right: 105px;
+    .section1-adver{
+        padding-top: 40px;
     }
-    .title-con{
-        width: 95%;
-    }
-    /*  */
-    .add-adver1{
-        width: 95%;
+    .header1-cont2{
+        height: 50px;
     }
     .advice{
         width: 20px;
+    }
+    .advice1{
+        width: 18px;
+    }
+    .icon-left{
+        font-size: 25px;
+    }
+    .headerdow{
+        display: block;
+        position: fixed;
+        bottom: 0%;
+        left: 0%;
+        right: 0;
+        z-index: 100;
+        background-color: #0143a7bb;
+     }
+    .down{
+         margin: auto;
+         width: 80%;
+         height: 100%;
+         align-items: center;
+         display: flex;
+         justify-content: space-between;
+     }
+     .add1{
+         align-self: center;
+     }
+    .my-adver{
+        display: none;
+    }
+    .my-adver1{
+        display: block;
+        border: 0;
+        color: hsl(0, 0%, 100%);
+    }
+    .card{ 
+        width: 95%;
+        padding: 2px;
+    }
+    .card-left{
+        width: 35%;
+    }
+    .card-right{
+        width:65%;
+    }
+    .header4{
+        margin-top:101px;
     }
 }
