--- a/css/style.css
+++ b/css/style.css
@@ -518,5 +518,8 @@ article{
         width: 93%;
         border-bottom:3px solid rgb(153, 153, 153);
     }
+    .commont{
+        width: 100%;
+    }
 }
 /*  */
